--- a/src/components/chatpage.css
+++ b/src/components/chatpage.css
@@ -1,56 +1,81 @@
-.chatContainer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -7rem;
-    font-size: 1.5rem;
-    padding: 0.5rem;
-
+.chatPageContainer {
+    width: 23rem;
+    background-color: #141414;
 }
 
 .chatConversationContainer {
     border-bottom: 1px solid #374151;
-    background-color: #141414;
 }
 
-.chatPageContainer {
-    position: fixed;
-    height: 45rem;
-    background-color: #141414;
-    top: 7rem;
+.activeChatTab {
+    border-bottom: 2px solid white;
 }
 
-.chatContaint {
-    background-color: #374151;
-    text-align: right;
+.chatContainer {
+    display: flex;
+    justify-content: space-between;
     padding: 0.5rem;
-    border-radius: 0.5rem;
-    border-top-right-radius: 0;
+    font-size: 1.5rem;
+}
+
+.closeChatBtn {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.chatSubMenu {
+    position: sticky;
+    top: 0;
+    display: flex;
+    gap: 10rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+}
+
+.chatConverSationArea {
+    display: flex;
+    background-color: #141414;
+    gap: 0.5rem;
+    flex-direction: column-reverse;
+    padding: 1rem;
+    height: 31rem;
+    align-items: flex-end;
+    overflow-y: scroll;
+}
+
+#ScrollStyle::-webkit-scrollbar {
+    width: 5px;
+}
+
+#ScrollStyle::-webkit-scrollbar-thumb {
+    background: #374151;
+    border-radius: 2px;
 }
 
 .chatInputContainer {
-    position: fixed;
-    top:44rem;
-    left: 2.5rem;
+    margin: 1.5rem;
     border: 1px solid blue;
     border-radius: 0.5rem;
     padding: 0.5rem;
-    width: 16rem;
     display: flex;
     justify-content: space-between;
 }
 
+.filesUpload {
+    position: relative;
+    top: 1rem;
+    visibility: hidden;
+    left: 0.4rem;
+
+}
 
 .inputBtns {
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-    color: white;
     font-size: 1.3rem;
+    cursor: pointer;
 }
 
 .Chatinput {
     padding: 0.5rem;
-    width: 12rem;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid wheat;
@@ -59,42 +84,33 @@
     color: white;
 }
 
-.filesUpload {
+.chatContaint {
+    background-color: #374151;
+    text-align: right;
+    padding: 0.5rem;
+    word-wrap: break-word;
+    border-radius: 0.5rem;
+    border-top-right-radius: 0;
+    margin: 0.5rem;
+    width: 5rem;
+}
+
+.messageTime {
+    margin-left: 3.5rem;
+}
+
+.popupcontainer {
+    border: 1px solid white;
+    padding: 1rem;
     position: relative;
-    top: 1rem;
-    visibility: hidden;
-    left: 0.4rem;
+    top: 1.5rem;
+    width: 17rem;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 0.2rem;
+    left: 2rem;
 }
 
-.chatSubMenu {
-    display: flex;
-    gap: 10rem;
+.removeAttachment {
     font-size: 1.5rem;
-    padding: 1rem;
-    justify-content: center;
-}
-
-.chatConverSationArea {
-    background-color: #141414;
-    height: 34.5rem;
-    overflow-y: auto;
-    display: flex;
-    gap: 0.5rem;
-    flex-direction: column;
-    padding: 1rem;
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 18rem;
-}
-.closeChatBtn{
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 2rem;
-    color: white;
-}
-.activeChatTab{
-    border-bottom: 2px solid white;
-    /* background-color: green; */
-    /* padding: 1rem; */
 }
